# rrts-game

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  VERSION
project/: main.cpp  main_test.cpp
project/backend/: README.md  main_test.cpp
project/backend/include/: IndexBuffer.h  RenderState.h  RenderTarget.h  Session.h  Shader.h  Square.h  Texture.h  Vertex.h  VertexBuffer.h  VertexBufferArray.h  Window.h
project/backend/source/: IndexBuffer.cpp  RenderState.cpp  RenderTarget.cpp  Session.cpp  Shader.cpp  Square.cpp  Texture.cpp  Transformable.cpp  Vertex.cpp  VertexBuffer.cpp  VertexBufferArray.cpp  Window.cpp
project/game-framework/: README.md  main_test.cpp
project/game-framework/include/: IndexBuffer.h  Logger.h  RenderState.h  RenderTarget.h  Session.h  Shader.h  TargetRenderer.h  Texture.h  Transformable.h  Vertex.h  VertexBuffer.h  VertexBufferArray.h  Window.h
project/game-framework/source/: IndexBuffer.cpp  Logger.cpp  RenderState.cpp  RenderTarget.cpp  Session.cpp  Shader.cpp  Square.cpp  TargetRenderer.cpp  Texture.cpp  Transformable.cpp  Vertex.cpp  VertexBuffer.cpp  VertexBufferArray.cpp  Window.cpp
project/game-framework/test/: SessionTest.hpp
project/game-main/: README.md  main.cpp  main_test.cpp
project/main/: main.cpp
project/resources/shaders/: es.fs  es.vs  vertex.glsl
project/web/: README.md
project/web/www/: calendar.html  contact.html  emscripten_loader.js  index.html  rrts_main.data  rrts_main.js  rrts_main.wasm  rts-game.html  script.js  style.css  styles.css
src/: main.cpp
src/include/: Application.h
src/main/: Application_linux.cpp  Application_windows.cpp
src/test/: ApplicationTest.hpp
